update rest files
